config/deploy/sandbox/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nova-sandbox-us
  namespace: nova-sandbox-us
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    name: nova
  type: NodePort
